Freezing features and all non-critical fixes in preparation for 4.0 debut - Tables are now supported - Minor spacing tweaks - Code block rendering is now better supported - Experimented with antialiased text, disabled for 4.0 thought (It messed with my design too much, would have to makes various weight changes to make up for the change, pushed to 5.0)

--- a/Styles/bigfoot-number.css
+++ b/Styles/bigfoot-number.css
@@ -197,18 +197,12 @@
 	top: -1px;
 	height: 1.1em;
 	border-radius: 0.5em 0.5em 0 0;
-	background-image: -webkit-gradient(linear, left top, left bottom, from(#fafafa), to(rgba(250, 250, 250, 0)));
-	background-image: -webkit-linear-gradient(top, #fafafa 50%, rgba(250, 250, 250, 0) 100%);
-	background-image: linear-gradient(to bottom, #fafafa 50%, rgba(250, 250, 250, 0) 100%);
 }
 
 .bigfoot-footnote.is-scrollable .bigfoot-footnote__wrapper:after {
 	bottom: -1px;
 	height: 1.2em;
 	border-radius: 0 0 0.5em 0.5em;
-	background-image: -webkit-gradient(linear, left bottom, left top, from(#fafafa), to(rgba(250, 250, 250, 0)));
-	background-image: -webkit-linear-gradient(bottom, #fafafa 50%, rgba(250, 250, 250, 0) 100%);
-	background-image: linear-gradient(to top, #fafafa 50%, rgba(250, 250, 250, 0) 100%);
 }
 
 .bigfoot-footnote.is-scrollable ::-webkit-scrollbar {
